--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -1,11 +1,2 @@
-#spring.datasource.initialize=true
-#spring.datasource.url=jdbc:mysql://localhost:3306/chicsotck
-#spring.datasource.username=root
-#spring.datasource.password=1234
-#spring.h2.console.enabled=true
+spring.application.name=ecommerce
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/chicstock
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=update
